--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>ChatRWS — Reflection Without Surveillance</title>
+  <title>ChatRWS — Reflect Without Surveillance</title>
   <style>
     :root {
       --bg:#f6f7f9;
@@ -220,7 +220,7 @@
 
   <header>
     <div class="bar">
-      <div class="title"><strong>ChatRWS 1.0</strong> - Reflection Without Surveillance</div>
+      <div class="title"><strong>ChatRWS 1.0</strong> - Reflect Without Surveillance</div>
       <div class="ephemeral">Local only · Nothing stored or analyzed</div>
     </div>
   </header>
