--- a/index.html
+++ b/index.html
@@ -221,10 +221,14 @@
   .bar { padding: 12px 12px; }
   .title { font-size: 16px; }
   .ephemeral { font-size: 12px; }
+      background: inherit !important;
 
   .chat {
     padding: 12px;
     border-radius: 16px;
+    background: inherit !important;   /* same as body/page */
+    border: 0 !important;
+    box-shadow: none !important;
   }
 
   /* Force the composer to the bottom on mobile (even before first send) */
