--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@ html, body { background: var(--bg); color: var(--fg); }
 
   <header>
     <div class="bar">
-      <div class="title"><strong>ChatRWS 1.0</strong> - Reflect Without Surveillance</div>
+      <div class="title"><strong>ChatRWS v1</strong> - Reflect Without Surveillance</div>
       <div class="ephemeral">Local only · Nothing stored or analyzed</div>
     </div>
   </header>
